Maintenance: CrossEncoderReranker - Add comprehensive tests and improve code quality
This commit adds comprehensive test coverage for CrossEncoderReranker
implementations and fixes a code quality issue in NoopCrossEncoderReranker.

Changes made:
- Replace deprecated Collectors.toList() with .toList() in NoopCrossEncoderReranker
- Add 11 comprehensive unit tests for NoopCrossEncoderReranker covering:
  * Score-based sorting (descending order)
  * Equal scores handling
  * Edge cases (empty list, single candidate, null/blank query)
  * Negative and zero scores
  * Large score values
  * Many candidates
- Add 15 comprehensive unit tests for NaverCrossEncoderReranker covering:
  * Successful API reranking
  * Partial document citation
  * Fallback scenarios (no citations, API errors, invalid JSON)
  * Null/blank query handling
  * Empty candidates handling
  * API key validation
  * Request body and headers verification
  * Document structure validation

All tests pass successfully and maintain consistency with existing test patterns
in the codebase.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>